fix problem with layout jumping on images w/o explicit width

--- a/src/css/components/ActionCard.less
+++ b/src/css/components/ActionCard.less
@@ -9,7 +9,7 @@
 
     &__logo img {
         height: 140px;
-        width: auto;
+        width: 280px;
         filter: blur(0) brightness(0.6);
     }
 
