--- a/src/css/components/ArticleAuthor.less
+++ b/src/css/components/ArticleAuthor.less
@@ -3,7 +3,6 @@
 .ArticleAuthor {
     display: flex;
 
-    //box-shadow: 0 1px 5px 1px @gray-80;
     border: 1px solid @gold;
 
     margin: 20px 0;
@@ -77,6 +76,7 @@
         padding: 10px 10px 0;
         & img {
             height: 120px;
+            width: 120px;
             border-radius: 65px;
             border: 3px solid white;
         }
